--- a/package.json
+++ b/package.json
@@ -263,7 +263,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css":"node-sass --include-path scss scss/main.scss css/style.css",
+    "build-css":"node-sass --include-path scss scss/main.scss css/styles.css",
     "watch-css":"nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
